force-app/main/default/objects/AgileSprint__c/AgileSprint__c.object-meta.xml
<CustomObject>
    <label>Agile Sprint</label>
    <nameField>
        <label>Agile Sprint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agile Sprints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>