force-app/main/default/objects/AgileSprint__c/fields/AssociatedGroup__c.field-meta.xml
<CustomField>
    <fullName>AssociatedGroup__c</fullName>
    <label>Associated Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BI Operations</fullName>
            </value>
            <value>
                <fullName>BP.com</fullName>
            </value>
            <value>
                <fullName>Care Systems</fullName>
            </value>
            <value>
                <fullName>Mediation</fullName>
            </value>
            <value>
                <fullName>Salesforce: CRM Ops &amp; Dev</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>