force-app/main/default/objects/AgileSprint__c/fields/CountofIssuesAtClose__c.field-meta.xml
<CustomField>
    <fullName>CountofIssuesAtClose__c</fullName>
    <label>Count of Issues (At Close)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>