force-app/main/default/objects/AgileSprint__c/fields/CountofIssuesAtStart__c.field-meta.xml
<CustomField>
    <fullName>CountofIssuesAtStart__c</fullName>
    <label>Count of Issues (At Start)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>