force-app/main/default/objects/AgileSprint__c/fields/DifferentiatingVolume__c.field-meta.xml
<CustomField>
    <fullName>DifferentiatingVolume__c</fullName>
    <formula>CountofIssuesAtClose__c -  CountofIssuesAtStart__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Differentiating Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>