force-app/main/default/objects/AgileSprint__c/listViews/BP_Com.listView-meta.xml
<ListView>
    <fullName>BP_Com</fullName>
    <columns>NAME</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Status__c</columns>
    <columns>CountofIssuesAtStart__c</columns>
    <columns>CountofIssuesAtClose__c</columns>
    <columns>DifferentiatingVolume__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AssociatedGroup__c</field>
        <operation>equals</operation>
        <value>BP.com</value>
    </filters>
    <label>BP.Com</label>
    <language>en_US</language>
</ListView>