force-app/main/default/objects/AgileSprint__c/listViews/Care_Systems.listView-meta.xml
<ListView>
    <fullName>Care_Systems</fullName>
    <columns>NAME</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Status__c</columns>
    <columns>CountofIssuesAtStart__c</columns>
    <columns>CountofIssuesAtClose__c</columns>
    <columns>DifferentiatingVolume__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AssociatedGroup__c</field>
        <operation>equals</operation>
        <value>Care Systems</value>
    </filters>
    <label>Care Systems</label>
    <language>en_US</language>
</ListView>