force-app/main/default/objects/AgileSprint__c/listViews/Mediation.listView-meta.xml
<ListView>
    <fullName>Mediation</fullName>
    <columns>NAME</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Status__c</columns>
    <columns>CountofIssuesAtStart__c</columns>
    <columns>CountofIssuesAtClose__c</columns>
    <columns>DifferentiatingVolume__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AssociatedGroup__c</field>
        <operation>equals</operation>
        <value>Mediation</value>
    </filters>
    <label>Mediation</label>
    <language>en_US</language>
</ListView>