force-app/main/default/objects/AgileSprint__c/listViews/Salesforce_CRM_Ops_Dev.listView-meta.xml
<ListView>
    <fullName>Salesforce_CRM_Ops_Dev</fullName>
    <columns>NAME</columns>
    <columns>StartDate__c</columns>
    <columns>DeliveryDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Status__c</columns>
    <columns>CountofIssuesAtStart__c</columns>
    <columns>CountofIssuesAtClose__c</columns>
    <columns>DifferentiatingVolume__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AssociatedGroup__c</field>
        <operation>equals</operation>
        <value>Salesforce: CRM Ops &amp; Dev</value>
    </filters>
    <label>Salesforce: CRM Ops &amp; Dev</label>
    <language>en_US</language>
</ListView>